# Laboratorio

./: CMakeLists.txt  Chat.cpp  Chat.h  Message.cpp  Message.h  Notifier.cpp  Notifier.h  README.md  User.cpp  User.h  main.cpp
test/: CMakeLists.txt  ChatTest.cpp  MessageTest.cpp  UserTest.cpp  runAllTests.cpp
